kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  labels:
    project: mlflow-server-infrastructure
    owner: data_and_analytics
    application: mlflow
    app: mlflow
    component: mlflow
    version: "v0.1"
    release: "r1"
    environment: test
    stage: test
    tier: backend
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/instance: mlflow-test
    app.kubernetes.io/part-of: dfds-direct
    app.kubernetes.io/managed-by: data_and_analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        project: mlflow-server-infrastructure
        owner: data_and_analytics
        application: mlflow
        app: mlflow
        component: mlflow
        version: "v0.1"
        release: "r1"
        environment: test
        stage: test
        tier: backend
        app.kubernetes.io/name: mlflow
        app.kubernetes.io/instance: mlflow-test
        app.kubernetes.io/part-of: dfds-direct
        app.kubernetes.io/managed-by: data_and_analytics
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::272250499452:role/mlflow
    spec:
      containers:
        - name: mlflow
          image: 3loc/mlflow:1.4.0
          ports:
            - containerPort: 80
              name: web
          command: ["mlflow"]
          args:
            [
              "server",
              "--host",
              "0.0.0.0",
              "-p",
              "80",
              "--backend-store-uri",
              "sqlite:///mlruns.db",
              "--default-artifact-root",
              "s3://dfds-temp-mlflow",
            ]
