kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlops-mmlml
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  selector:
    app: mlflow
  type: ClusterIP
