kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mlflow
  namespace: mlops-mmlml
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: internal.hellman.oxygen.dfds.cloud
      http:
        paths:
          - path: /smartdata/mlflow
            backend:
              serviceName: mlflow
              servicePort: external
